# calculator

./: .gitignore  LICENSE  Makefile  README.md  install.sh  push.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: python-ci.yml
calculator/: __init__.py  cli.py  operations.py  repl.py
src/: calculator.c  calculator.h  main.c  operations.c
tests/: test_operations.py  test_repl.py
